add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>kaydens github or somthing</title>
+     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+      </nav>
+      <main>
+        <!-- Sidebar section -->
+  <div class="sidebar">
+  <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3BQ8flgOjHEK2RA87hFiwzdjgoEJaqjXEoA&s">
+  </div>
+
+  <!-- Content section -->
+  <div class="content">
+  <h2>My peasentation</h2>
+  <p>I just work here</p>
+
+   <!-- Interests section -->
+  <div id="interests">
+    <h3>Interests</h3>
+    <ul>
+      <li>Slip|Avenged</li>
+      <li>Knot|Sevenfold</li>
+      <li>Baking Cupcakes</li>
+    </ul>
+  </div>
+  </div>
+  <nav>
+  <h1>Kayden Parnell</h1>
+  <ul id="nav-ul">
+    <li class="nav-li">
+      <a href="index.html">Home</a>
+    </li>
+    <li class="nav-li">
+      <a href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
+  </nav>
+      </main>
     </div>
   </body>
 </html>
