--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     </li>
     <li class="nav-li">
       <a href="portfolio.html">Portfolio</a>
+      <li class="nav-li"><a id="navanchor" href="images.html">Images</a>
+                  </li>
     </li>
   </ul>
   </nav>
